2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
	  540054 - 'Go to Declaration' goes wrong when methods are
	  overloaded'.

2009-10-14  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Special
	  handling of field names & typenames (same as for
	  properties).

2009-10-13  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/HighlightCSharpSemanticRule.cs:
	  Fixed 'Bug 546392 - exception in highlighting'.

2009-10-12  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Fixed 'Bug 546016 - EventHandler code completion not working
	  if there is no space after +='.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* md1format.xml: track namespace changes.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Fixed 'Bug 545667 - Exception when autoformatting'.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Completion/NRefactoryParameterDataProvider.cs:
	  Don't show return type for constructors.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* MonoDevelop.CSharp:
	* gtk-gui/gui.stetic:
	* CSharpBinding.csproj:
	* Gui/CSharpAmbience.cs:
	* Gui/ResolveVisitor.cs:
	* Gui/FormattingPanel.cs:
	* Parser/CodeGenerator.cs:
	* CSharpBinding.addin.xml:
	* CSharpLanguageBinding.cs:
	* Parser/CSharpFormatter.cs:
	* Gui/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Project:
	* Parser/NRefactoryParser.cs:
	* Syntax/CSharpSyntaxMode.cs:
	* Gui/CodeGenerationPanel.cs:
	* Gui/MemberCompletionData.cs:
	* MonoDevelop.CSharp.Resolver:
	* MonoDevelop.CSharp.Completion:
	* MonoDevelop.CSharp.Formatting:
	* CSharpEnhancedCodeProvider.cs:
	* MonoDevelop.CSharp.Refactoring:
	* Parser/FindMemberAstVisitor.cs:
	* MonoDevelop.CSharp.Highlighting:
	* CSharpBindingCompilerManager.cs:
	* Gui/NewCSharpExpressionFinder.cs: