@@ -1,5 +1,12 @@
 2009-10-14  Mike Krüger  <mkrueger@novell.com>
 
+	* Makefile.am:
+	* CSharpBinding.csproj:
+	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
+	  Disabled conditionditional highlighting for debugger files.
+
+2009-10-14  Mike Krüger  <mkrueger@novell.com>
+
 	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs: Fixed 'Bug
 	  540054 - 'Go to Declaration' goes wrong when methods are
 	  overloaded'.
